<resources>
    <string name="app_name">ScenicRoutePlanner</string>
    <string name="start_location">Start location</string>
    <string name="destination">Destination</string>
    <string name="scenic_route_min_length">Scenic route minimal length</string>
    <string name="return_map">Return to map</string>
    <string name="find_route">Find route</string>
    <string name="dialog_alert_title">Error</string>
    <string name="database_not_available">Database not available.</string>
    <string name="start_field_empty">Start location field is empty.</string>
    <string name="destination_field_empty">Destination field is empty.</string>
    <string name="scenic_route_min_field_empty">Scenic routes minimum distance field is empty.</string>
    <string name="not_found_start_point">Not found start point.</string>
    <string name="not_found_destination">Not found destination.</string>
    <string name="find_route_process_error">Finding route failed.</string>
    <string name="put_route_on_map_error">Putting route on map failed.</string>
    <string name="information">Information</string>
    <string name="not_found_path">Not found path.</string>
</resources>
